--- a/pom.xml
+++ b/pom.xml
@@ -129,4 +129,16 @@
             </build>
         </profile>
     </profiles>
+    <distributionManagement>
+       <snapshotRepository>
+           <id>snapshots</id>
+           <name>snapshots</name>
+           <url>http://13.57.52.164:8081/nexus/snapshots</url>
+       </snapshotRepository>
+       <repository>
+           <id>releases</id>
+           <name>releases</name>
+           <url>http://13.57.52.164:8081/nexus/releases</url>
+       </repository>
+   </distributionManagement>
 </project>
