--- a/pom.xml
+++ b/pom.xml
@@ -133,12 +133,12 @@
        <snapshotRepository>
            <id>snapshots</id>
            <name>snapshots</name>
-           <url>http://13.57.52.164:8081/nexus/snapshots</url>
+           <url>http://13.57.52.164:8081/nexus/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>releases</id>
            <name>releases</name>
-           <url>http://13.57.52.164:8081/nexus/releases</url>
+           <url>http://13.57.52.164:8081/nexus/content/repositories/releases</url>
        </repository>
    </distributionManagement>
 </project>
